--- a/src/BioCheckConsole/BioCheckConsole.fsproj
+++ b/src/BioCheckConsole/BioCheckConsole.fsproj
@@ -52,7 +52,7 @@
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
     <DocumentationFile>bin\Debug\BioCheckConsole.XML</DocumentationFile>
-    <StartArguments>-model EGF.json -engine CAV -formula "(Implies (= EGFR 2) (Eventually (= cfos 2)))" -path 10 -outputmodel -proof -ltloutput "output2.json" -mc</StartArguments>
+    <StartArguments>.\BioCheckConsole.exe -model Game_Benchmark.json -engine GAME -mutate 0 0 -mutate 1 0 -treat 2 1 -treat 3 1 -apopVar 4 -height 4</StartArguments>
     <StartWorkingDirectory>
     </StartWorkingDirectory>
   </PropertyGroup>
