Debugging extendQN -> VMCAI

--- a/src/BioCheckAnalyzer/BioCheckAnalyzer.fsproj
+++ b/src/BioCheckAnalyzer/BioCheckAnalyzer.fsproj
@@ -161,6 +161,9 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
